# DataForgeLite

./: .gitignore  Makefile  README.md  build.bat  build.ps1  go.mod  go.sum
DataForgeLiteClient/: DataForgeLiteClient.sln
DataForgeLiteClient/DataForgeLiteClient/: App.xaml  App.xaml.cs  AppState.cs  DataForgeLiteBackend.cs  DataForgeLiteClient.csproj  Directory.Build.props  MainWindow.xaml  MainWindow.xaml.cs  PinyinHelper.cs  optimize.py
DataForgeLiteClient/DataForgeLiteClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs
DataForgeLiteClient/DataForgeLiteClient/docs/: 产品文档.md
Game/: go.mod  go.sum  main.go
HubertFA/: pyproject.toml
cmd/: main.go
cmd/llama_asr_decode/: CMakeLists.txt  README.md  main.cpp
docs/: 开发文档.md  开发计划.md
docs/V2/: README.md  产品文档.md  开发文档.md  开发计划.md
internal/QwenASR/: asrinfer.go  decoder_gguf.go  decoder_onnx.go  encoder_gguf.go  encoder_onnx.go  mel.go  model.go  tokenizer.go
internal/QwenASR/example/: main.go
internal/addphnum/: addphnum.go  config.go  dictionary.go  processor.go
internal/audiopreprocessor/: audiopreprocessor.go  config.go  decoder.go  encoder.go  lufs.go  processor.go  quality.go  resampler.go  types.go
internal/audiosplitter/: audiosplitter.go  config.go  exporter.go  loader.go  selector.go  types.go  vad.go
internal/exporter/: builder.go  config.go  csv.go  errors.go  exporter.go  processor.go  textgrid.go
internal/gameonnx/: align.go  audio.go  gameonnx.go  onnx.go  runner.go
internal/hubertfa/: audio.go  config.go  decoder.go  g2p.go  infer.go  textgrid.go  types.go
internal/multilingual/: batch.go  chinese.go  config.go  detector.go  dictionary.go  english.go  errors.go  integration.go  japanese.go  processor.go  types.go
internal/tgannotation/: combine.go  slice.go  textgrid.go
tools/: export_qwen3asr_onnx.py
tools/OnnxStringScan/: OnnxStringScan.csproj  Program.cs
