[project]
name = "hubertfa-infer"
version = "0.1.0"
description = "HubertFA ONNX 强制对齐推理"
requires-python = ">=3.10"
dependencies = [
    "click",
    "librosa<0.10.0",
    "matplotlib",
    "numpy~=1.26.4",
    "PyYAML",
    "tqdm",
    "textgrid~=1.5",
    "pandas",
    "onnx",
    "onnxruntime-gpu==1.19.0",
]
